data/all_generated_tests/raw_wast_tests/br_if_StackCorruption_1445.wast
;; 6. **Empty Block Branch Test**:    - **Description**: Place `br_if` within an empty block and ensure it properly handles the absence of a stack requirement at the branch point.    - **Constraint Checked**: Handling of empty blocks.    - **Relation to Stack Corruption**: Ensures `br_if` in empty blocks manages the stack correctly.

(assert_invalid
  (module (func $empty-block-branch
    (block (br_if 0 (i32.const 1)))
  ))
  "type mismatch"
)